--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.38.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version> <!-- 按照实际需要选择版本 -->
+        </dependency>
     </dependencies>
 
     <build>
