--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 server:
   port: 9000
+sa-token:
+  token-name: satoken
+  is-log: true
 #???????
 spring:
   application:
-    name: springboot01
+    name: softjob
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -22,4 +25,5 @@ mybatis-plus:
         logic-delete-field: deleted # 全局逻辑删除字段名
         logic-delete-value: 1 # 逻辑已删除值
         logic-not-delete-value: 0 # 逻辑未删除值
+        id-type: auto
 
