--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,26 @@ sa-token:
   is-log: true
 #???????
 spring:
+  mail:
+    # 发送者邮箱
+    username: 2233085367@qq.com
+    #申请到的授权码
+    password: tcqsurtzhxwpecde
+    # 配置 SMTP 服务器地址
+    host: smtp.qq.com
+    # 端口号465或587
+    port: 465
+    protocol: smtps
+    # 默认的邮件编码为UTF-8
+    default-encoding: UTF-8
+    # 配置SSL 加密工厂
+    properties:
+      mail:
+        smtp:
+          socketFactoryClass: javax.net.ssl.SSLSocketFactory
+          #表示开启 DEBUG 模式，这样，邮件发送过程的日志会在控制台打印出来，方便排查错误
+          debug: true
+          ssl: true
   application:
     name: softjob
   datasource:
@@ -18,6 +38,12 @@ spring:
       schema-locations: classpath:initial_table.sql
       mode: always
       platform: mysql
+  redis:
+    host: localhost
+    port: 6379
+    #    password: 123456
+    database: 1 # 数据库索引，默认0
+    timeout: 5000  # 连接超时，单位ms
 
 mybatis-plus:
   global-config:
